@@ -48,8 +48,7 @@ import com.publicissapient.kpidashboard.apis.model.ReleaseFilter;
 import com.publicissapient.kpidashboard.apis.model.SprintFilter;
 import com.publicissapient.kpidashboard.apis.model.TreeAggregatorDetail;
 import com.publicissapient.kpidashboard.common.constant.CommonConstant;
-import com.publicissapient.kpidashboard.common.model.application.AccountHierarchy;
-import com.publicissapient.kpidashboard.common.model.application.KanbanAccountHierarchy;
+import com.publicissapient.kpidashboard.common.model.application.ProjectHierarchy;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssue;
 import com.publicissapient.kpidashboard.common.model.jira.KanbanIssueCustomHistory;
 import com.publicissapient.kpidashboard.common.model.jira.KanbanJiraIssue;
@@ -73,24 +72,18 @@ public final class KPIHelperUtil {
 	 * Sets root filter in aggregationTreeNodeList based upon account hierarchy .
 	 *
 	 * @param aggregationTreeNodeList
-	 * @param isKanban
 	 */
-	private static List<Node> setRootFilterAndLimitHierarchy(List<Node> aggregationTreeNodeList, boolean isKanban,
+	private static List<Node> setRootFilterAndLimitHierarchy(List<Node> aggregationTreeNodeList,
 			String firstLevel, int level) {
 		List<Node> filteredNode = new ArrayList<>();
 		String rootId = Constant.SPEEDY_ROOT;
-		if (isKanban) {
-			aggregationTreeNodeList
-					.add(new Node(0, rootId, rootId, null, Filters.ROOT.name(), new KanbanAccountHierarchy()));
-		} else {
-			aggregationTreeNodeList.add(new Node(0, rootId, rootId, null, Filters.ROOT.name(), new AccountHierarchy()));
-		}
+		aggregationTreeNodeList.add(new Node(0, rootId, rootId, null, Filters.ROOT.name(), new ProjectHierarchy()));
 
 		aggregationTreeNodeList.stream().filter(node -> node.getGroupName().equalsIgnoreCase(firstLevel))
 				.forEach(node -> node.setParentId(rootId));
 		if (level > 0) {
 			filteredNode = aggregationTreeNodeList.stream().filter(node -> node.getLevel() <= level)
-					.collect(Collectors.toList());
+					.toList();
 		}
 		return filteredNode;
 	}
@@ -135,23 +128,18 @@ public final class KPIHelperUtil {
 
 	private static void addProjectFilter(Node node) {
 		if (node.getGroupName().equalsIgnoreCase(CommonConstant.HIERARCHY_LEVEL_ID_PROJECT)) {
-			if (isAccountHierarchyData(node)) {
-				node.setProjectFilter(new ProjectFilter(node.getId(), node.getName(),
-						node.getAccountHierarchy().getBasicProjectConfigId()));
-			} else {
-				node.setProjectFilter(new ProjectFilter(node.getId(), node.getName(),
-						node.getAccountHierarchyKanban().getBasicProjectConfigId()));
-			}
+			node.setProjectFilter(new ProjectFilter(node.getId(), node.getName(),
+					node.getProjectHierarchy().getBasicProjectConfigId()));
 		} else if (node.getGroupName().equalsIgnoreCase(CommonConstant.HIERARCHY_LEVEL_ID_SPRINT)) {
 			node.setProjectFilter(new ProjectFilter(node.getParent().getId(), node.getParent().getName(),
-					node.getAccountHierarchy().getBasicProjectConfigId()));
+					node.getProjectHierarchy().getBasicProjectConfigId()));
 			node.setSprintFilter(new SprintFilter(node.getId(), node.getName(),
-					node.getAccountHierarchy().getBeginDate(), node.getAccountHierarchy().getEndDate()));
+					node.getProjectHierarchy().getBeginDate(), node.getProjectHierarchy().getEndDate()));
 		} else if (node.getGroupName().equalsIgnoreCase(CommonConstant.HIERARCHY_LEVEL_ID_RELEASE)) {
 			node.setProjectFilter(new ProjectFilter(node.getParent().getId(), node.getParent().getName(),
-					node.getAccountHierarchy().getBasicProjectConfigId()));
+					node.getProjectHierarchy().getBasicProjectConfigId()));
 			node.setReleaseFilter(new ReleaseFilter(node.getId(), node.getName(),
-					node.getAccountHierarchy().getBeginDate(), node.getAccountHierarchy().getEndDate()));
+					node.getProjectHierarchy().getBeginDate(), node.getProjectHierarchy().getEndDate()));
 		}
 	}
 
@@ -164,7 +152,7 @@ public final class KPIHelperUtil {
 	 *            list of leaf nodes in the created tree
 	 * @return leaf nodes
 	 */
-	public static List<Node> getLeafNodes(Node node, List<Node> leafNodeList) {
+	public static List<Node> getLeafNodes(Node node, List<Node> leafNodeList , boolean isKanban) {
 
 		if (null == node) {
 			return Collections.emptyList();
@@ -172,16 +160,16 @@ public final class KPIHelperUtil {
 
 		if (node.getChildren().isEmpty()) {
 
-			if (isAccountHierarchyData(node)) {
-				Node newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(),
-						node.getGroupName(), node.getAccountHierarchy(), node.getProjectFilter(),
+			Node newNode;
+			if (!isKanban) {
+				newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(),
+						node.getGroupName(), node.getProjectHierarchy(), node.getProjectFilter(),
 						node.getSprintFilter(), node.getReleaseFilter());
-				leafNodeList.add(newNode);
-			} else if (isAccountHierarchyDataKanban(node)) {
-				Node newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(),
-						node.getGroupName(), node.getAccountHierarchyKanban(), node.getProjectFilter());
-				leafNodeList.add(newNode);
+			} else {
+				newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(),
+						node.getGroupName(), node.getProjectHierarchy(), node.getProjectFilter());
 			}
+			leafNodeList.add(newNode);
 		}
 
 		List<Node> children = node.getChildren();
@@ -203,22 +191,12 @@ public final class KPIHelperUtil {
 					});
 					child.setChildren(sortedChildNodes);
 				}
-				getLeafNodes(child, leafNodeList);
+				getLeafNodes(child, leafNodeList , isKanban);
 			}
 		}
 
 		return leafNodeList;
 
-	}
-
-	/**
-	 * Checks for account hierarchy data
-	 *
-	 * @param node
-	 * @return
-	 */
-	private static boolean isAccountHierarchyData(Node node) {
-		return null != node.getAccountHierarchy();
 	}
 
 	/**
@@ -243,12 +221,14 @@ public final class KPIHelperUtil {
 		List<Node> aggregatedTreeNodeList = new ArrayList<>();
 		List<Node> filteredNode = null;
 		Node root = null;
+		boolean isKanban = false;
 		if (CollectionUtils.isNotEmpty(filteredAccountDataList)) {
 			filteredAccountDataList.forEach(data -> cloneNode(data.getNode(), aggregatedTreeNodeList));
-			filteredNode = setRootFilterAndLimitHierarchy(aggregatedTreeNodeList, false, firstLevel, leafNodeLevel);
+			filteredNode = setRootFilterAndLimitHierarchy(aggregatedTreeNodeList, firstLevel, leafNodeLevel);
 		} else if (CollectionUtils.isNotEmpty(filteredAccountDataKanban)) {
+			isKanban = true;
 			filteredAccountDataKanban.forEach(data -> cloneNode(data.getNode(), aggregatedTreeNodeList));
-			filteredNode = setRootFilterAndLimitHierarchy(aggregatedTreeNodeList, true, firstLevel, leafNodeLevel);
+			filteredNode = setRootFilterAndLimitHierarchy(aggregatedTreeNodeList, firstLevel, leafNodeLevel);
 		}
 
 		if (CollectionUtils.isNotEmpty(filteredNode)) {
@@ -263,8 +243,8 @@ public final class KPIHelperUtil {
 
 		List<Node> leafNodeList = new ArrayList<>();
 		List<Node> projectNodeList = new ArrayList<>();
-		getLeafNodes(root, leafNodeList);
-		getProjectNodes(root, projectNodeList);
+		getLeafNodes(root, leafNodeList , isKanban);
+		getProjectNodes(root, projectNodeList , isKanban);
 
 		log.debug("[LEAF_NODES][{}]. Leaf nodes of the tree {}", kpiRequest.getRequestTrackerId(), leafNodeList);
 
@@ -305,7 +285,7 @@ public final class KPIHelperUtil {
 	 *            list of leaf nodes in the created tree
 	 * @return project nodes
 	 */
-	public static List<Node> getProjectNodes(Node node, List<Node> projectNodeList) {
+	public static List<Node> getProjectNodes(Node node, List<Node> projectNodeList , boolean isKanban) {
 
 		if (null == node) {
 			return Collections.emptyList();
@@ -313,14 +293,14 @@ public final class KPIHelperUtil {
 
 		if (Constant.PROJECT.equalsIgnoreCase(node.getGroupName())) {
 
-			if (isAccountHierarchyData(node)) {
+			if (!isKanban) {
 				Node newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(),
-						node.getGroupName(), node.getAccountHierarchy(), node.getProjectFilter(),
+						node.getGroupName(), node.getProjectHierarchy(), node.getProjectFilter(),
 						node.getSprintFilter());
 				projectNodeList.add(newNode);
-			} else if (isAccountHierarchyDataKanban(node)) {
+			} else  {
 				Node newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(),
-						node.getGroupName(), node.getAccountHierarchyKanban(), node.getProjectFilter());
+						node.getGroupName(), node.getProjectHierarchy(), node.getProjectFilter());
 				projectNodeList.add(newNode);
 			}
 		}
@@ -328,22 +308,12 @@ public final class KPIHelperUtil {
 		List<Node> children = node.getChildren();
 		for (Node child : children) {
 			if (child.getChildren() != null) {
-				getProjectNodes(child, projectNodeList);
+				getProjectNodes(child, projectNodeList , isKanban);
 			}
 		}
 
 		return projectNodeList;
 
-	}
-
-	/**
-	 * Checks for account hierarchy data kanban
-	 *
-	 * @param node
-	 * @return
-	 */
-	private static boolean isAccountHierarchyDataKanban(Node node) {
-		return null != node.getAccountHierarchyKanban();
 	}
 
 	public static Map<String, Long> setpriorityScrum(List<JiraIssue> sprintWiseDefectDataList,
