@@ -32,13 +32,13 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import com.publicissapient.kpidashboard.common.model.application.OrganizationHierarchy;
 import org.apache.commons.beanutils.PropertyUtils;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.tuple.Pair;
 import org.bson.types.ObjectId;
 import org.codehaus.jettison.json.JSONException;
 import org.joda.time.DateTime;
@@ -62,11 +62,11 @@ import com.publicissapient.kpidashboard.common.constant.CommonConstant;
 import com.publicissapient.kpidashboard.common.constant.NormalizedJira;
 import com.publicissapient.kpidashboard.common.constant.ProcessorConstants;
 import com.publicissapient.kpidashboard.common.model.ProcessorExecutionTraceLog;
-import com.publicissapient.kpidashboard.common.model.application.AccountHierarchy;
 import com.publicissapient.kpidashboard.common.model.application.AdditionalFilter;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
 import com.publicissapient.kpidashboard.common.model.application.HierarchyLevel;
 import com.publicissapient.kpidashboard.common.model.application.ProjectBasicConfig;
+import com.publicissapient.kpidashboard.common.model.application.ProjectHierarchy;
 import com.publicissapient.kpidashboard.common.model.azureboards.Attribute;
 import com.publicissapient.kpidashboard.common.model.azureboards.AzureBoardsWIModel;
 import com.publicissapient.kpidashboard.common.model.azureboards.Fields;
@@ -82,13 +82,13 @@ import com.publicissapient.kpidashboard.common.model.jira.JiraIssue;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssueCustomHistory;
 import com.publicissapient.kpidashboard.common.model.jira.SprintDetails;
 import com.publicissapient.kpidashboard.common.processortool.service.ProcessorToolConnectionService;
-import com.publicissapient.kpidashboard.common.repository.application.AccountHierarchyRepository;
 import com.publicissapient.kpidashboard.common.repository.jira.AssigneeDetailsRepository;
 import com.publicissapient.kpidashboard.common.repository.jira.JiraIssueCustomHistoryRepository;
 import com.publicissapient.kpidashboard.common.repository.jira.JiraIssueRepository;
 import com.publicissapient.kpidashboard.common.service.AesEncryptionService;
 import com.publicissapient.kpidashboard.common.service.HierarchyLevelService;
 import com.publicissapient.kpidashboard.common.service.ProcessorExecutionTraceLogService;
+import com.publicissapient.kpidashboard.common.service.ProjectHierarchyService;
 import com.publicissapient.kpidashboard.common.util.DateUtil;
 
 import lombok.extern.slf4j.Slf4j;
@@ -109,8 +109,6 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	@Autowired
 	private AzureProcessorRepository azureProcessorRepository;
 	@Autowired
-	private AccountHierarchyRepository accountHierarchyRepository;
-	@Autowired
 	private AzureProcessorConfig azureProcessorConfig;
 	@Autowired
 	private AesEncryptionService aesEncryptionService;
@@ -130,6 +128,8 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 	private ProcessorExecutionTraceLogService processorExecutionTraceLogService;
 	@Autowired
 	private ProcessorToolConnectionService processorToolConnectionService;
+	@Autowired
+	private ProjectHierarchyService projectHierarchyService;
 
 	@Override
 	public int processesAzureIssues(ProjectConfFieldMapping projectConfig, String projectKey, // NOSONAR
@@ -420,7 +420,7 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 
 				setDueDates(azureIssue, fields, fieldsMap, fieldMapping);
 
-				if (StringUtils.isNotBlank(azureIssue.getProjectID())) {
+				if (StringUtils.isNotBlank(azureIssue.getBasicProjectConfigId())) {
 					azureIssuesToSave.add(azureIssue);
 					azureIssueHistoryToSave.add(azureIssueHistory);
 				}
@@ -554,8 +554,8 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 			azureIssue.setSprintEndDate("");
 			azureIssue.setSprintAssetState("");
 		} else {
-			String sprintId = value.getId() + AzureConstants.COMBINE_IDS_SYMBOL + azureIssue.getProjectName()
-					+ AzureConstants.COMBINE_IDS_SYMBOL + projectConfig.getBasicProjectConfigId();
+			String sprintId = value.getId() + AzureConstants.COMBINE_IDS_SYMBOL
+					+ projectConfig.getProjectBasicConfig().getProjectNodeId();
 			setSprintData(azureIssue, value, sprintId);
 			populateSprintDetails(value, sprintDetailsSet, sprintId);
 		}
@@ -690,7 +690,6 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 			FieldMapping fieldMapping, ProjectConfFieldMapping projectConfig, Map<String, Object> fieldsMap) {
 
 		azureIssueHistory.setProjectID(azureIssue.getProjectName());
-		azureIssueHistory.setProjectComponentId(azureIssue.getProjectID());
 		azureIssueHistory.setProjectKey(azureIssue.getProjectKey());
 		azureIssueHistory.setStoryType(azureIssue.getTypeName());
 		azureIssueHistory.setAdditionalFilters(azureIssue.getAdditionalFilters());
@@ -799,26 +798,21 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 
 		HierarchyLevel sprintHierarchyLevel = hierarchyLevelsMap.get(CommonConstant.HIERARCHY_LEVEL_ID_SPRINT);
 
-		Map<Pair<String, String>, AccountHierarchy> existingHierarchy = AzureIssueClientUtil
-				.getAccountHierarchy(accountHierarchyRepository);
+		Map<String, List<ProjectHierarchy>> existingHierarchy = projectHierarchyService
+				.getProjectHierarchyMapByConfig(projectConfig.getBasicProjectConfigId().toString());
 
-		Set<AccountHierarchy> setToSave = new HashSet<>();
+		Set<ProjectHierarchy> setToSave = new HashSet<>();
 		for (JiraIssue jiraIssue : jiraIssueList) {
 			if (StringUtils.isNotBlank(jiraIssue.getProjectName()) && StringUtils.isNotBlank(jiraIssue.getSprintName())
 					&& StringUtils.isNotBlank(jiraIssue.getSprintBeginDate())
 					&& StringUtils.isNotBlank(jiraIssue.getSprintEndDate())) {
 
-				AccountHierarchy projectData = accountHierarchyRepository
-						.findByLabelNameAndBasicProjectConfigId(CommonConstant.HIERARCHY_LEVEL_ID_PROJECT,
-								new ObjectId(jiraIssue.getBasicProjectConfigId()))
-						.get(0);
-
-				AccountHierarchy sprintHierarchy = createHierarchyForSprint(jiraIssue,
-						projectConfig.getProjectBasicConfig(), projectData, sprintHierarchyLevel);
+				ProjectHierarchy sprintHierarchy = createHierarchyForSprint(jiraIssue,
+						projectConfig.getProjectBasicConfig(), sprintHierarchyLevel);
 
 				setToSaveAccountHierarchy(setToSave, sprintHierarchy, existingHierarchy);
 
-				List<AccountHierarchy> additionalFiltersHierarchies = accountHierarchiesForAdditionalFilters(jiraIssue,
+				List<ProjectHierarchy> additionalFiltersHierarchies = accountHierarchiesForAdditionalFilters(jiraIssue,
 						sprintHierarchy, sprintHierarchyLevel, hierarchyLevelList);
 				additionalFiltersHierarchies.forEach(
 						accountHierarchy -> setToSaveAccountHierarchy(setToSave, accountHierarchy, existingHierarchy));
@@ -827,7 +821,7 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 
 		}
 		if (CollectionUtils.isNotEmpty(setToSave)) {
-			accountHierarchyRepository.saveAll(setToSave);
+			projectHierarchyService.saveAll(setToSave);
 		}
 	}
 
@@ -1044,10 +1038,6 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 
 	private void setProjectSpecificDetails(ProjectConfFieldMapping projectConfig, JiraIssue jiraIssue) {
 		String name = projectConfig.getProjectName();
-		String id = new StringBuffer(name).append(CommonConstant.UNDERSCORE)
-				.append(projectConfig.getBasicProjectConfigId().toString()).toString();
-
-		jiraIssue.setProjectID(id);
 		jiraIssue.setProjectName(name);
 		jiraIssue.setProjectKey(projectConfig.getProjectKey());
 		jiraIssue.setBasicProjectConfigId(projectConfig.getBasicProjectConfigId().toString());
@@ -1059,80 +1049,92 @@ public class ScrumAzureIssueClientImpl extends AzureIssueClient {
 		jiraIssue.setProjectPath("");
 	}
 
-	private AccountHierarchy createHierarchyForSprint(JiraIssue jiraIssue, ProjectBasicConfig projectBasicConfig,
-			AccountHierarchy projectHierarchy, HierarchyLevel hierarchyLevel) {
-		AccountHierarchy accountHierarchy = null;
+	private ProjectHierarchy createHierarchyForSprint(JiraIssue jiraIssue, ProjectBasicConfig projectBasicConfig,
+			HierarchyLevel hierarchyLevel) {
+		ProjectHierarchy projectHierarchy = null;
 		try {
 
-			accountHierarchy = new AccountHierarchy();
-			accountHierarchy.setBasicProjectConfigId(projectBasicConfig.getId());
-			accountHierarchy.setIsDeleted(AzureConstants.FALSE);
-			accountHierarchy.setLabelName(hierarchyLevel.getHierarchyLevelId());
+			projectHierarchy = new ProjectHierarchy();
+			projectHierarchy.setBasicProjectConfigId(projectBasicConfig.getId());
+			projectHierarchy.setHierarchyLevelId(hierarchyLevel.getHierarchyLevelId());
 			String sprintName = (String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintName");
 			String sprintId = (String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintID");
-
-			accountHierarchy.setNodeId(sprintId);
-			accountHierarchy.setNodeName(sprintName + AzureConstants.COMBINE_IDS_SYMBOL + jiraIssue.getProjectName());
-
-			accountHierarchy.setBeginDate((String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintBeginDate"));
-			accountHierarchy.setEndDate((String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintEndDate"));
-			accountHierarchy.setPath(new StringBuffer(56).append(projectHierarchy.getNodeId())
-					.append(CommonConstant.ACC_HIERARCHY_PATH_SPLITTER).append(projectHierarchy.getPath()).toString());
-			accountHierarchy.setParentId(projectHierarchy.getNodeId());
+			String state = (String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintAssetState");
+			projectHierarchy.setNodeId(sprintId);
+			projectHierarchy
+					.setNodeName(sprintName + AzureConstants.COMBINE_IDS_SYMBOL + projectBasicConfig.getProjectName());
+			projectHierarchy.setNodeDisplayName(
+					sprintName + AzureConstants.COMBINE_IDS_SYMBOL + projectBasicConfig.getProjectDisplayName());
+			projectHierarchy.setSprintState(state);
+			projectHierarchy.setBeginDate((String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintBeginDate"));
+			projectHierarchy.setEndDate((String) PropertyUtils.getSimpleProperty(jiraIssue, "sprintEndDate"));
+			projectHierarchy.setParentId(projectBasicConfig.getProjectNodeId());
 
 		} catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
 			log.error("Jira Processor Failed to get Account Hierarchy data {}", e);
 		}
-		return accountHierarchy;
+		return projectHierarchy;
 	}
 
-	private List<AccountHierarchy> accountHierarchiesForAdditionalFilters(JiraIssue jiraIssue,
-			AccountHierarchy sprintHierarchy, HierarchyLevel sprintHierarchyLevel,
+	private List<ProjectHierarchy> accountHierarchiesForAdditionalFilters(JiraIssue jiraIssue,
+			ProjectHierarchy sprintHierarchy, HierarchyLevel sprintHierarchyLevel,
 			List<HierarchyLevel> hierarchyLevelList) {
 
-		List<AccountHierarchy> accountHierarchies = new ArrayList<>();
+		List<ProjectHierarchy> projectHierarchyList = new ArrayList<>();
 		List<AdditionalFilter> additionalFilters = ListUtils.emptyIfNull(jiraIssue.getAdditionalFilters());
 
 		List<String> additionalFilterCategoryIds = hierarchyLevelList.stream()
 				.filter(x -> x.getLevel() > sprintHierarchyLevel.getLevel()).map(HierarchyLevel::getHierarchyLevelId)
-				.collect(Collectors.toList());
+				.toList();
 
 		additionalFilters.forEach(additionalFilter -> {
 			if (additionalFilterCategoryIds.contains(additionalFilter.getFilterId())) {
 				String labelName = additionalFilter.getFilterId();
 				additionalFilter.getFilterValues().forEach(additionalFilterValue -> {
-					AccountHierarchy adFilterAccountHierarchy = new AccountHierarchy();
-					adFilterAccountHierarchy.setLabelName(labelName);
+					ProjectHierarchy adFilterAccountHierarchy = new ProjectHierarchy();
+					adFilterAccountHierarchy.setHierarchyLevelId(labelName);
 					adFilterAccountHierarchy.setNodeId(additionalFilterValue.getValueId());
 					adFilterAccountHierarchy.setNodeName(additionalFilterValue.getValue());
+					adFilterAccountHierarchy.setNodeDisplayName(additionalFilterValue.getValue());
 					adFilterAccountHierarchy.setParentId(sprintHierarchy.getNodeId());
-					adFilterAccountHierarchy.setPath(sprintHierarchy.getNodeId()
-							+ CommonConstant.ACC_HIERARCHY_PATH_SPLITTER + sprintHierarchy.getPath());
-					adFilterAccountHierarchy.setBasicProjectConfigId(new ObjectId(jiraIssue.getBasicProjectConfigId()));
-					accountHierarchies.add(adFilterAccountHierarchy);
+					adFilterAccountHierarchy.setBasicProjectConfigId(sprintHierarchy.getBasicProjectConfigId());
+					projectHierarchyList.add(adFilterAccountHierarchy);
 				});
 			}
 
 		});
-
-		return accountHierarchies;
+		return projectHierarchyList;
 	}
 
 	/**
+	 *
 	 * @param setToSave
-	 * @param accountHierarchy
+	 * @param sprintHierarchy
 	 * @param existingHierarchy
 	 */
-	private void setToSaveAccountHierarchy(Set<AccountHierarchy> setToSave, AccountHierarchy accountHierarchy,
-			Map<Pair<String, String>, AccountHierarchy> existingHierarchy) {
-		if (StringUtils.isNotBlank(accountHierarchy.getParentId())) {
-			AccountHierarchy exHiery = existingHierarchy
-					.get(Pair.of(accountHierarchy.getNodeId(), accountHierarchy.getPath()));
-
-			if (null == exHiery) {
-				accountHierarchy.setCreatedDate(LocalDateTime.now());
-				setToSave.add(accountHierarchy);
+	private void setToSaveAccountHierarchy(Set<ProjectHierarchy> setToSave, ProjectHierarchy sprintHierarchy,
+			Map<String, List<ProjectHierarchy>> existingHierarchy) {
+		if (StringUtils.isNotBlank(sprintHierarchy.getParentId())) {
+			List<ProjectHierarchy> exHieryList = existingHierarchy.get(sprintHierarchy.getNodeId());
+			if (CollectionUtils.isEmpty(exHieryList)) {
+				sprintHierarchy.setCreatedDate(LocalDateTime.now());
+				setToSave.add(sprintHierarchy);
+			} else {
+				Map<String, ProjectHierarchy> exHiery = exHieryList.stream().collect(
+						Collectors.toMap(OrganizationHierarchy::getParentId, p -> p, (existing, newPair) -> existing));
+				ProjectHierarchy projectHierarchy = exHiery.get(sprintHierarchy.getParentId());
+				if (projectHierarchy == null) {
+					sprintHierarchy.setCreatedDate(LocalDateTime.now());
+					setToSave.add(sprintHierarchy);
+				} else if (!projectHierarchy.equals(sprintHierarchy)) {
+					projectHierarchy.setBeginDate(sprintHierarchy.getBeginDate());
+					projectHierarchy.setNodeName(sprintHierarchy.getNodeName());// sprint name changed
+					projectHierarchy.setEndDate(sprintHierarchy.getEndDate());
+					projectHierarchy.setSprintState(sprintHierarchy.getSprintState());
+					setToSave.add(projectHierarchy);
+				}
 			}
+
 		}
 	}
 
